# verified-instances

./: .gitignore  .gitmodules  .travis.yml  Dockerfile  Haskell17.md  LICENSE  Makefile  README.md  liquid.sh  stack.yaml  verified-instances.cabal  verified.cabal
examples/: Composition.hs  Fold.hs  Int.hs  IsoInt.hs  List.hs  Nat.hs  NatGeneric.hs  Peano.hs
examples/dpj/: .gitignore  CSV.hs  DPJ.java  IntegerSumReduction.hs  IntegerSumReduction2.hs  IntegerSumReduction2NoPLE.hs  IntegerSumReduction2NoVerification.hs  IntegerSumReductionNoVerification.hs  Script.hs  VerifiedAbelianMonoid.hs
examples/nbody/: VerifiedAbelianMonoid.hs  allpairs.hs  allpairs_verified.hs  allpairs_verifiedNoPLE.hs
experiments/: .agda-lib  SimplePar.v  SumListPerm.agda
experiments/Control/: Concurrency.agda  Delay.agda  Heap.agda  Kleisli.agda  Operational.agda  SimplePar.agda  SimplePar.hs  SimplestPar.agda  TotallyFree.agda
experiments/Data/List/: Perm.agda
experiments/agda/: .agda-lib
experiments/agda/Control/: ConcurrencyFree.agda  Operational.agda
experiments/coq/: Dockerfile  FiniteHeap.v  Future.v  Heap.v  Heap2.v  IVar.v  Lattice.v  Lemmas.v  LemmasV1.v  LemmasV2.v  Makefile  Par.v  SimplePar.v  SimpleParV1.v  SimpleParV2.v  Tactics.v  Trace.v  Utils.v  Val.v  _CoqProject  build_with_docker.sh  build_with_nix.sh
experiments/hs/Control/: SimplePar.hs  SimplePar2.hs
generic-proofs/: A.hs  B.hs  ChangeLog.md  Dockerfile  Generics.hs  Generics2.hs  K1.hs  Makefile  RunTestsCabal.hs  Specification.markdown  VF.hs  abstract.txt  cabal.project  generic-proofs.cabal  run_tests.sh  run_tests_cabal.sh  stack.yaml
generic-proofs/generic-deriving-newtypeless/: generic-deriving-newtypeless.cabal
generic-proofs/generic-deriving-newtypeless/src/Generics/Deriving/: Newtypeless.hs
generic-proofs/generic-deriving-newtypeless/src/Generics/Deriving/Newtypeless/: Base.hs  Instances.hs  TH.hs
generic-proofs/generic-deriving-newtypeless/src/Generics/Deriving/Newtypeless/Base/: Internal.hs
generic-proofs/generic-deriving-newtypeless/src/Generics/Deriving/Newtypeless/TH/: Internal.hs  NonDataKinded.hs
generic-proofs/generic-deriving-newtypeless/tests/: ExampleSpec.hs
generic-proofs/include/: K1.spec
generic-proofs/include/GenericProofs/: Iso.spec
generic-proofs/include/Generics/Deriving/: Newtypeless.spec
generic-proofs/include/Generics/Deriving/Newtypeless/Base/: Internal.spec
generic-proofs/src/GenericProofs/: Classes.hs  Combinators.hs  Iso.hs  Orphans.hs  TH.hs  Utils.hs  VerifiedEq.hs  VerifiedFunctor.hs  VerifiedMonoid.hs  VerifiedOrd.hs  VerifiedSemigroup.hs
generic-proofs/src/GenericProofs/VerifiedEq/: Generics.hs  Instances.hs
generic-proofs/src/GenericProofs/VerifiedEq/Examples/: Either.hs  Identity.hs  List.hs  Maybe.hs  Nat.hs  Newtype.hs  Product.hs  Product3.hs  Sum.hs  Triple.hs  TwoData.hs  Unit.hs
generic-proofs/src/GenericProofs/VerifiedFunctor/: Generics.hs
generic-proofs/src/GenericProofs/VerifiedFunctor/Examples/: Either.hs  Identity.hs  List.hs  Maybe.hs  Triple.hs
generic-proofs/src/GenericProofs/VerifiedMonoid/: Generics.hs  Instances.hs
generic-proofs/src/GenericProofs/VerifiedMonoid/Examples/: Identity.hs  Triple.hs
generic-proofs/src/GenericProofs/VerifiedOrd/: Generics.hs  Instances.hs
generic-proofs/src/GenericProofs/VerifiedOrd/Examples/: Either.hs  EitherNoIso.hs  Identity.hs  List.hs  Maybe.hs  Nat.hs  Newtype.hs  Product.hs  ProductNoIso.hs  Sum.hs  These.hs  TheseNoIso.hs  Triple.hs  Unit.hs
generic-proofs/src/GenericProofs/VerifiedSemigroup/: Generics.hs  Instances.hs
generic-proofs/src/GenericProofs/VerifiedSemigroup/Examples/: Identity.hs  Newtype.hs  Triple.hs
src/: List.hs  Nat.hs  VerifiedEq.hs  VerifiedOrd.hs
src/Control/: SimplePar.hs
src/Data/: Adj.hs  CommutativeSemigroup.hs  Inj.hs  Iso.hs  List.hs  Nat.hs  Prod.hs  VerifiableConstraint.hs  VerifiedCommutativeSemigroup.hs  VerifiedEq.hs  VerifiedEq0.hs  VerifiedFunctor.hs  VerifiedMonad.hs  VerifiedMonoid.hs  VerifiedOrd.hs  VerifiedSemigroup.hs
src/Data/VerifiableConstraint/: Internal.hs
src/Data/VerifiedEq/: Instances.hs  InstancesNoPLE.hs
src/Data/VerifiedEq/Instances/: Contra.hs  ContraNoPLE.hs  Generics.hs  Iso.hs  IsoNoPLE.hs  Prod.hs  ProdNoPLE.hs  Sum.hs
src/Data/VerifiedFunctor/Instances/: List.hs
src/Data/VerifiedMonad/Instances/: List.hs
src/Data/VerifiedMonoid/: Instances.hs
src/Data/VerifiedMonoid/Instances/: Iso.hs  Prod.hs
src/Data/VerifiedOrd/: Instances.hs  InstancesNoPLE.hs
src/Data/VerifiedOrd/Instances/: Generics.hs  Inj.hs  InjNoPLE.hs  Iso.hs  IsoNoPLE.hs  Nat.hs  Prod.hs  Sum.hs
src/GHC/Classes/: VerifiedEq.hs  VerifiedOrd.hs  VerifiedSemigroup.hs
src/Language/Haskell/Liquid/: ProofCombinators.hs
