name:                verified-instances
version:             0.1.0.0
synopsis:            Verified typeclasses with LiquidHaskell
homepage:            https://github.com/iu-parfunc/verified-instances
license:             BSD3
license-file:        LICENSE
author:              Vikraman Choudhury
maintainer:          git@vikraman.org
category:            Example
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     GHC.Classes.VerifiedEq
                     , GHC.Classes.VerifiedOrd
                     , Data.Nat
                     , Data.List
                     , Data.VerifiableConstraint
                     , Data.VerifiableConstraint.Internal
                     , Data.VerifiedEq
                     , Data.VerifiedEq.Instances
                     , Data.VerifiedOrd
                     , Data.VerifiedMonoid
                     , Data.VerifiedSemigroup
                     , Language.Haskell.Liquid.ProofCombinators
  other-extensions:    MultiParamTypeClasses
                     , FlexibleInstances
                     , FlexibleContexts
                     , TypeFamilies
                     , IncoherentInstances
  build-depends:       base >=4.8 && <5
                     , constraints >=0.8 && <0.9
                     , newtype >= 0.2 && <0.3
                     , reflection >=2.1.2 && <2.2
                     , semigroups >=0.18 && <0.19
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010
