name:                verified-instances
version:             0.1.0.0
synopsis:            Verified typeclasses with LiquidHaskell
homepage:            https://github.com/iu-parfunc/verified-instances
license:             BSD3
license-file:        LICENSE
author:              Vikraman Choudhury
maintainer:          git@vikraman.org
category:            Example
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag examples
  default: False
  manual: True

library
  exposed-modules:     GHC.Classes.VerifiedEq
                     , GHC.Classes.VerifiedOrd
                     , Data.CommutativeSemigroup
                     , Data.VerifiableConstraint
                     , Data.VerifiableConstraint.Internal
                     , Data.VerifiedCommutativeSemigroup
                     , Data.VerifiedEq
                     , Data.VerifiedEq.Instances
                     , Data.VerifiedEq.Instances.Contra
                     , Data.VerifiedEq.Instances.Generics
                     , Data.VerifiedEq.Instances.Iso
                     , Data.VerifiedEq.Instances.Sum
                     , Data.VerifiedEq.Instances.Prod
                     , Data.VerifiedOrd
                     , Data.VerifiedOrd.Instances
                     , Data.VerifiedOrd.Instances.Inj
                     , Data.VerifiedOrd.Instances.Iso
                     , Data.VerifiedOrd.Instances.Sum
                     , Data.VerifiedOrd.Instances.Prod
                     , Data.VerifiedMonoid
                     , Data.VerifiedSemigroup
                     , Data.Inj
                     , Data.Iso
                     , Language.Haskell.Liquid.ProofCombinators

  other-extensions:    MultiParamTypeClasses
                     , FlexibleInstances
                     , FlexibleContexts
                     , TypeFamilies
                     , IncoherentInstances
  build-depends:       base >=4.8 && <5
                     , contravariant >= 1.4   && < 1.5
                     , constraints   >= 0.8   && < 0.10
                     , newtype       >= 0.2   && < 0.3
                     , reflection    >= 2.1.2 && < 2.2
                     , semigroups    >= 0.18  && < 0.19
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall -fno-warn-orphans
  default-language:    Haskell2010

executable dpj2
  if !flag(examples)
    buildable:         False

  main-is:             IntegerSumReduction2.hs
  build-depends:       base >= 4.8 && < 5
                     , monad-parallel
                     , semigroups
                     , vector
                     , verified-instances
                     , deepseq, criterion
                     , lvish, transformers
                     , time
  hs-source-dirs:      examples/dpj
  ghc-options:         -O2 -Wall -threaded -rtsopts
  default-language:    Haskell2010

executable nbody-allpairs
  if !flag(examples)
    buildable:         False

  main-is:             allpairs.hs
  build-depends:       base >= 4.8 && < 5
                     , monad-par, monad-par-extras
                     , semigroups
                     , vector
--                     , verified-instances
                     , deepseq, criterion
--                     , lvish
                     , transformers
                     , random
                     , time
                     , vector-th-unbox
                     , clock
  hs-source-dirs:      examples/nbody/
  ghc-options:         -O2 -Wall -threaded -rtsopts
  default-language:    Haskell2010

executable simplepar
  if !flag(examples)
    buildable:         False

  main-is:             experiments/Control/SimplePar.hs
  build-depends:       base >= 4.8 && < 5
                     , containers
                     , mtl
                     , QuickCheck
                     , tasty
                     , tasty-quickcheck
  ghc-options:         -O2 -Wall -threaded -rtsopts
  default-language:    Haskell2010
