name:                generic-proofs
version:             0.1
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          ryan.gl.scott@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     GenericProofs.Classes
                       GenericProofs.Iso
                       GenericProofs.VerifiedEq
                       -- GenericProofs.VerifiedEq.Examples.FullStressTest
                       GenericProofs.VerifiedEq.Examples.Newtype
                       -- GenericProofs.VerifiedEq.Examples.Product
                       -- GenericProofs.VerifiedEq.Examples.Sum
                       GenericProofs.VerifiedEq.Generics
                       GenericProofs.VerifiedEq.Instances
                       GenericProofs.VerifiedFunctor
                       GenericProofs.VerifiedFunctor.Generics

  other-modules:       GenericProofs.Combinators
  build-depends:       base >= 4.8 && < 5
                     , contravariant
                     , generic-deriving-newtypeless
                     , invariant
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
