name:                generic-proofs
version:             0.1
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          ryan.gl.scott@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     GenericProofs.Classes
                       GenericProofs.Iso
                       GenericProofs.VerifiedEq
                       GenericProofs.VerifiedEq.Examples.List
                       GenericProofs.VerifiedEq.Examples.Newtype
                       GenericProofs.VerifiedEq.Examples.Product
                       GenericProofs.VerifiedEq.Examples.Sum
                       GenericProofs.VerifiedEq.Examples.Unit
                       GenericProofs.VerifiedEq.Generics
                       GenericProofs.VerifiedEq.Instances
                       GenericProofs.VerifiedSemigroup
                       GenericProofs.VerifiedSemigroup.Generics
                       GenericProofs.VerifiedSemigroup.Examples.Newtype
                       GenericProofs.VerifiedSemigroup.Instances
                       GenericProofs.TH

                       -- Not really working
                       --- Higher-rank stuff
                       GenericProofs.VerifiedFunctor
                       GenericProofs.VerifiedFunctor.Examples.Identity
                       GenericProofs.VerifiedFunctor.Generics
                       --- Superclass issues
                       GenericProofs.VerifiedMonoid
                       GenericProofs.VerifiedOrd
                       GenericProofs.VerifiedOrd.Generics
                       GenericProofs.VerifiedOrd.Instances

  -- other-modules:       GenericProofs.Combinators
  build-depends:       base >= 4.8 && < 5
                     , contravariant
                     , generic-deriving-newtypeless
                     , invariant
                     , liquidhaskell >= 0.7
                     , template-haskell == 2.10.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
